--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 <div class="card__cta">
                                     <div class="card__price-box">
                                         <p class="card__price-only">Solo</p>
-                                        <p class="card__price-value">Bs. 100 / Kg</p>
+                                        <p class="card__price-value">Bs. 450 / Quintal</p>
                                     </div>
                                     <a href="#popup" class="btn btn--white"
                                         >contáctanos</a
@@ -255,7 +255,7 @@
                                 <div class="card__cta">
                                     <div class="card__price-box">
                                         <p class="card__price-only">Solo</p>
-                                        <p class="card__price-value">Bs. 100 / Kg</p>
+                                        <p class="card__price-value">Bs. 550 / Quintal</p>
                                     </div>
                                     <a href="#popup" class="btn btn--white"
                                         >contáctanos</a
@@ -271,7 +271,7 @@
                                 <div class="card__picture card__picture--3">&nbsp;</div>
                                 <h4 class="card__heading">
                                     <span class="card__heading-span card__heading-span--3"
-                                        >Maní Pelado</span
+                                        >Maní Pelado Blanqueado</span
                                     >
                                 </h4>
                                 <div class="card__details">
@@ -288,7 +288,7 @@
                                 <div class="card__cta">
                                     <div class="card__price-box">
                                         <p class="card__price-only">Solo</p>
-                                        <p class="card__price-value">Bs. 100 / Kg</p>
+                                        <p class="card__price-value">Bs. 600 / Quintal</p>
                                     </div>
                                     <a href="#popup" class="btn btn--white"
                                         >contáctanos</a
