Correcciones HTML y CSS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-        <title>Productos De Tierras Nuevas</title>
+        <title>Productos De Yacuiba</title>
     </head>
 
     <body>
@@ -55,7 +55,7 @@
             <div class="header__text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">maní</span>
-                    <span class="heading-primary--sub">tierras nuevas</span>
+                    <span class="heading-primary--sub">Yacuiba</span>
                 </h1>
 
                 <a href="#section-tours" class="btn btn--white btn--animated"
@@ -68,66 +68,71 @@
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 id="comunidad" class="heading-secondary">
-                        Productos sembrados en tierras nuevas
+                        Productos sembrados en Yacuiba
                     </h2>
                 </div>
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        <h3 class="heading-tertiary u-margin-bottom-small">
-                            Colegio Evo Morales Ayma
-                        </h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Yacuiba</h3>
                         <p class="paragraph">
-                            La Unidad Educativa Juan Evo Morales Ayma se encuentra ubicada
-                            a 34 Km. de la ciudad de Yacuiba en la comunidad Tierras
-                            Nuevas, donde viven más de mil habitantes, conformando una
-                            comunidad multicultural pero la mayoría son migrantes de
-                            Chuquisaca y Potosí siendo su principal actividad económica la
-                            agricultura, dedicándose a la siembra de soya, maíz y maní que
-                            sirve para la venta y su sustento diario, alguna familias se
-                            dedican también a la crianza de la pequeña ganadería como ser
-                            ganado vacuno, porcino, ovino y avícola, una mínima parte son
-                            originario del lugar, donde las tradiciones y costumbres se
-                            pueden observar de acuerdo a su lugar de origen.
+                            Yacuiba es un distrito destacado del sur de Bolivia, ubicado
+                            en la provincia Gran Chaco del departamento de Tarija. Se
+                            caracteriza por la pluralidad de sus habitantes, ya que en
+                            esta región conviven personas de distintas culturas,
+                            tradiciones y orígenes, lo que enriquece su identidad y
+                            fortalece su espíritu comunitario. La economía de Yacuiba se
+                            basa principalmente en la producción agrícola y ganadera. Sus
+                            tierras fértiles permiten el cultivo de diversos productos,
+                            entre los que sobresale el maní, considerado uno de los
+                            principales recursos del distrito por su alta calidad y su
+                            importancia en la alimentación y el comercio local. Además, la
+                            producción vacuna contribuye de manera significativa al
+                            desarrollo económico, ya que abastece tanto al consumo interno
+                            como a mercados vecinos. Gracias a su gente trabajadora, su
+                            diversidad cultural y su potencial productivo, Yacuiba se
+                            consolida como una región próspera, símbolo de unidad y
+                            progreso en el sur boliviano.
                         </p>
 
                         <h3 class="heading-tertiary u-margin-bottom-small">
                             Una comunidad en crecimiento
                         </h3>
                         <p class="paragraph">
-                            La Unidad Educativa de tierras nuevas se encuentra ubicado en
-                            la comunidad del mismo nombre en la primera sección de la
-                            provincia Gran Chaco. Los comunitarios se dedican a la
-                            agricultura siendo este su principal fuente de ingresos el
-                            cultivo de maní, en menor porcentaje el maíz y verduras;
-                            también se dedican a la crianza de cerdos, chivas y gallinas.
-                            En su gran mayoría son familias de escasos recursos y viven en
-                            viviendas precarias y no cuentan con los servicios básicos.
+                            La comunidad de San Isidro se encuentra en el distrito de
+                            Yacuiba, dentro de la provincia Gran Chaco del departamento de
+                            Tarija. Es una comunidad reconocida por la diversidad y la
+                            unión de sus habitantes, quienes representan distintas
+                            costumbres y tradiciones que conviven en armonía, reflejando
+                            la riqueza cultural de la región chaqueña. Con su gente
+                            trabajadora, su riqueza cultural y su compromiso con el
+                            progreso, San Isidro es una comunidad que refleja el espíritu
+                            productivo y solidario del municipio de Yacuiba.
                         </p>
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
                             <img
-                                srcset="img/evo1.jpg 300w, img/evo1.jpg 1000w"
+                                srcset="img/sanisidro1.jpg 300w, img/sanisidro1.jpg 1000w"
                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                                 alt="Photo 1"
                                 class="composition__photo composition__photo--p1"
-                                src="img/evo1.jpg"
+                                src="img/sanisidro1.jpg"
                             />
 
                             <img
-                                srcset="img/evo3.jpg 300w, img/evo3.jpg 1000w"
+                                srcset="img/sanisidro3.jpg 300w, img/sanisidro3.jpg 1000w"
                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                                 alt="Photo 3"
                                 class="composition__photo composition__photo--p3"
-                                src="img/evo3.jpg"
+                                src="img/sanisidro3.jpg"
                             />
                             <img
-                                srcset="img/evo2.jpg 300w, img/evo2.jpg 1000w"
+                                srcset="img/sanisidro2.jpg 300w, img/sanisidro2.jpg 1000w"
                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                                 alt="Photo 2"
                                 class="composition__photo composition__photo--p2"
-                                src="img/evo2.jpg"
+                                src="img/sanisidro2.jpg"
                             />
                             <!--
                             <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
@@ -157,11 +162,10 @@
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-compass"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">
-                                Tierras Nuevas
+                                Yacuiba
                             </h3>
                             <p class="feature-box__text">
-                                Estamos ubicados en la comunidad de Tierras Nuevas -
-                                Yacuiba
+                                Estamos ubicados en la comunidad de Yacuiba - Yacuiba
                             </p>
                         </div>
                     </div>
@@ -301,7 +305,7 @@
 
                 <div class="u-center-text u-margin-top-huge">
                     <a
-                        href="https://wa.me/+59175229279"
+                        href="https://wa.me/+59175750753"
                         target="_blank"
                         class="btn btn--green"
                         >Contactar</a
@@ -499,15 +503,18 @@
                 <div class="col-1-of-2">
                     <div class="footer__navigation">
                         <ul class="footer__list">
-                            <a href="#" class="footer__link">Colegio Evo Morales Ayma</a
-                            >. Copyright &copy; by Grupo 3
+                            <a href="#" class="footer__link"
+                                >Unidad Educativa San Isidro</a
+                            >. Copyright &copy;
                         </ul>
                     </div>
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
                         Realizado por:
-                        <a href="#" class="footer__link">Grupo 3</a>
+                        <a href="#" class="footer__link">Fabio Leonardo Bautista - </a>
+                        <a href="#" class="footer__link">Anahi Miranda Aramayo - </a>
+                        <a href="#" class="footer__link">Danitza Fajardo Condori</a>
                     </p>
                 </div>
             </div>
@@ -523,22 +530,21 @@
                     <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-small">contáctanos</h2>
                     <h3 class="heading-tertiary u-margin-bottom-small">
-                        Colegio &ndash; Evo Morales Ayma
+                        Colegio &ndash; San Isidro
                     </h3>
                     <p class="popup__text">
-                        En las fértiles tierras de nuestra comunidad, crece un producto
-                        único, fruto de nuestra dedicación y respeto por el medio
-                        ambiente: el maní ecológico de Tierras Nuevas. Cada grano que
-                        sembramos lleva consigo la esencia de nuestra tierra, cultivado
-                        sin prisas, con manos amorosas que entienden y valoran los ritmos
-                        naturales. Nos enorgullece ofrecer un maní que no solo es
-                        delicioso, sino también un verdadero tributo a la sostenibilidad y
-                        al amor por la tierra. Nuestro maní es mucho más que un simple
-                        alimento; es el reflejo de un proceso ecológico, libre de
-                        pesticidas y químicos.
+                        En las fértiles tierras de Yacuiba, crece un producto único, fruto
+                        de nuestra dedicación y respeto por el medio ambiente: el maní
+                        ecológico de Yacuiba. Cada grano que sembramos lleva consigo la
+                        esencia de nuestra tierra, cultivado sin prisas, con manos
+                        amorosas que entienden y valoran los ritmos naturales. Nos
+                        enorgullece ofrecer un maní que no solo es delicioso, sino también
+                        un verdadero tributo a la sostenibilidad y al amor por la tierra.
+                        Nuestro maní es mucho más que un simple alimento; es el reflejo de
+                        un proceso ecológico, libre de pesticidas y químicos.
                     </p>
                     <a
-                        href="https://wa.me/+59175229279"
+                        href="https://wa.me/+59175750753"
                         target="_blank"
                         class="btn btn--green"
                         >Contactar</a
@@ -547,7 +553,7 @@
             </div>
         </div>
         <!-- Botón flotante de WhatsApp -->
-        <a href="https://wa.me/+59175229279" class="whatsapp_float" target="_blank">
+        <a href="https://wa.me/+59175750753" class="whatsapp_float" target="_blank">
             <img src="./img/social.png" alt="WhatsApp" class="whatsapp_icon" />
         </a>
     </body>
